add test for 'set' 'out' 'irq', and some fix base on the fix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,12 +19,29 @@ target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt)
 # Enable testing
 enable_testing()
 
-# Add test executable
-add_executable(pio_emu_tests
-        tests/test_main.cpp
+# Add test executable for SET functionality
+add_executable(test_pio_emu_set
+        tests/test_pio_emu_set.cpp
         src/PioStateMachine.cpp
         src/PioStateMachine.h
 )
+target_link_libraries(test_pio_emu_set PRIVATE fmt::fmt doctest::doctest)
+add_test(NAME test_pio_emu_set COMMAND test_pio_emu_set)
 
-target_link_libraries(pio_emu_tests PRIVATE fmt::fmt doctest::doctest)
-add_test(NAME pio_emu_tests COMMAND pio_emu_tests)
+# Add test executable for IRQ functionality
+add_executable(test_pio_emu_irq
+        tests/test_pio_emu_irq.cpp
+        src/PioStateMachine.cpp
+        src/PioStateMachine.h
+)
+target_link_libraries(test_pio_emu_irq PRIVATE fmt::fmt doctest::doctest)
+add_test(NAME test_pio_emu_irq COMMAND test_pio_emu_irq)
+
+# Add test executable for OUT functionality
+add_executable(test_pio_emu_out
+        tests/test_pio_emu_out.cpp
+        src/PioStateMachine.cpp
+        src/PioStateMachine.h
+)
+target_link_libraries(test_pio_emu_out PRIVATE fmt::fmt doctest::doctest)
+add_test(NAME test_pio_emu_out COMMAND test_pio_emu_out)
