add test for 'in', and some fix base on the test.

--- a/.gitignore
+++ b/.gitignore
@@ -148,4 +148,6 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
 
+.venv/
+
 # End of https://www.toptal.com/developers/gitignore/api/c++,clion
