refactor the PioStateMachine header file to make space for the ini settings loading and add ini parser
seperate the settings struct out of the class, so that we can easily load different settings at runtime or from different unit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(COMMON_SOURCES
         src/PioStateMachine.h
         src/logger/Logger.cpp
         src/logger/Logger.h
+        src/iniparse.h
 )
 
 # Main executable src/main.cpp
