rename the gui main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set(COMMON_SOURCES
 
 # Main executable src/main.cpp
 add_executable(pio_emu_gui
-        src/gui/imgui_test.cpp
+        src/gui/gui_main.cpp
         src/gui/PioStateMachineApp.cpp
         src/gui/PioStateMachineApp.h
         ${COMMON_SOURCES}
